--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+    <label for="name">Name:</label>
+    <input type="name" id="name" minlength="3", maxlength="50" required><br>
+	<label for="portfolio">Portfolio:</label>
+	<input type="url" id="portfolio" required><br>
+	<label for="favColor">Favourite Color:</label>
+	<input type="color" id="favColor" ><br>
+	<label for="likeness">Likeness:</label>
+    <input type="range" id="likeness" min="1", max="100">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
